# AI-Matters

./: .env  .gitignore  README.md  image_gen.py  main.py  pyproject.toml  suggestions_db.py
data_prepration/: scraper.py  vector_db_creation.ipynb
frontend/: index.html  script.js  styles.css
