[project]
name = "ai-matters-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "gradio-client>=1.11.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.30",
    "numpy>=2.3.2",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.13.0",
    "scikit-learn>=1.7.1",
    "scrapy>=2.13.3",
    "sentence-transformers>=5.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "uvicorn>=0.35.0",
]
